# ack

./: .appveyor.yml  .clang-format  .distr  .drone.yml  .hgignore  .hgtags  .project  .travis.yml  Action  CHANGES  CMakeLists.txt  Copyright  DistrAction  Makefile  NEW  README  TODO  TakeAction  _config.yml  about.md  build  build.lua  config.pm  index.html  index.md  olddocs.md  pager.js  pm  pmfile  realbuild  site.css  sync  testbuild
_includes/: footer.html  head.html  header.html
_posts/: 2016-06-04-welcome-to-jekyll.markdown
distr/: Action  Action1  Exceptions  How_To  dwalk  echod  f.attf  listall  listall.d  listdirs  mk_distr_syms  mka  mkd  mkdist  mkf  mks  mktree  todistr  ts
doc/: .distr  6500.doc  Makefile  READ_ME  ack.doc  ansi_C.doc  basic.doc  cg.doc  cref.doc  crefman.doc  i80.doc  install.doc  m2ref.doc  m68020.doc  ncg.doc  nopt.doc  pcref.doc  peep.doc  proto.make  regadd.doc  toolkit.doc  v7bugs.doc  val.doc  z80.doc
emtest/: .distr  Makefile  READ_ME  (+5 more)
h/: .distr  CMakeLists.txt  Makefile  arch.h  as_spec.h  bc_io.h  bc_string.h  build.lua  cg_pattern.h  cgg_cg.h  con_float  em_abs.h  em_ego.h  em_flag.h  em_mes.h  em_ptyp.h  em_reg.h  em_table  em_table_lib.lua  ip_spec.h  m2_traps.h  ocm_chan.h  ocm_parco.h  ocm_proc.h  out.h  pc_err.h  pc_file.h  pc_size.h  ranlib.h  stb.h
lang/cem/cemcom.ansi/: .distr  BigPars  CMakeLists.txt  LLlex.c  LLlex.h  LLmessage.c  LintPars  Makefile  Makefile.erik  Resolve  SmallPars  Version.c  align.h  arith.c  arith.h  assert.h  atw.h  blocks.c  blocks.h  build.lua  build.mk  cemcom.1  cemcom.ansi.1  ch3.c  ch3.h  ch3bin.c  ch3bin.h  ch3mon.c  ch3mon.h  ch7.c  ch7bin.c  ch7mon.c  char.tab  class.h  code.c  code.str  conversion.c  conversion.h  cstoper.c  cstoper.h  (+94 more)
modules/h/: .distr  CMakeLists.txt  ansi.h  em.h  emO_code.h  em_CtoO.h  em_arith.h  em_code.h  em_codeCE.h  em_label.h  em_mesX.h  proto.make
modules/src/alloc/: .distr  Amake.srclist  CMakeLists.txt  Makefile  Malloc.c  No_Mem.c  Realloc.c  Salloc.c  Srealloc.c  alloc.3  alloc.h  botch.c  build.lua  build.mk  clear.c  in_all.h  pmfile  proto.make  st_alloc.c  std_alloc.c  stdalloc.c
modules/src/data/: CMakeLists.txt  array.c  array.h  astring.c  astring.h  bigraph.c  bigraph.h  bitmap.c  bitmap.h  bset.c  bset.h  buffer.c  buffer.h  build.lua  diagnostics.c  diagnostics.h  hashtable.c  hashtable.h  heap.c  heap.h  imap.c  imap.h  map.c  map.h  mempool.c  mempool.h  pmap.c  pmap.h  pset.c  pset.h  set.c  set.h  smap.c  smap.h  stringlist.c  stringlist.h
modules/src/em_code/: .distr  CMakeLists.txt  C_out.c  Makefile  bhcst.c  bhdlb.c  bhdnam.c  bhfcon.c  bhicon.c  bhilb.c  bhpnam.c  bhucon.c  build.lua  build.mk  convert.c  crcst.c  crdlb.c  crdnam.c  crfcon.c  cricon.c  crilb.c  crpnam.c  crscon.c  crucon.c  crxcon.c  cst.c  dfdlb.c  dfdnam.c  dfilb.c  dlb.c  dnam.c  em.c  em.nogen  em_code.3X  em_code.h  em_codeCE.h  em_codeO.h  em_private.h  end.c  endarg.c  (+34 more)
modules/src/em_code/e/: C_failed.c  em.c  em_private.h
modules/src/em_code/k/: .distr  C_failed.c  em.c  em_private.h
modules/src/em_data/: .distr  CMakeLists.txt  build.lua  em_ptyp.c  make_flag_c.lua  make_mnem_c.lua  make_mnem_h.lua  make_pseu_c.lua  make_pseu_h.lua  make_spec_h.lua  makeem.c  new_table
modules/src/em_mes/: .distr  CMakeLists.txt  C_ms_com.c  C_ms_ego.c  C_ms_emx.c  C_ms_err.c  C_ms_flt.c  C_ms_gto.c  C_ms_lin.c  C_ms_opt.c  C_ms_par.c  C_ms_reg.c  C_ms_src.c  C_ms_stb.c  C_ms_std.c  Makefile  build.lua  build.mk  em_mes.3  pmfile  proto.make
modules/src/flt_arith/: .distr  Amake.srclist  CMakeLists.txt  Makefile  b64_add.c  b64_sft.c  build.lua  build.mk  flt_add.c  flt_ar2flt.c  flt_arith.3  flt_arith.h  flt_chk.c  flt_cmp.c  flt_div.c  flt_flt2ar.c  flt_misc.h  flt_modf.c  flt_mul.c  flt_nrm.c  flt_str2fl.c  flt_umin.c  misc.h  pmfile  proto.make  split.c  test.c  ucmp.c
modules/src/print/: .distr  CMakeLists.txt  Makefile  build.lua  build.mk  doprnt.c  format.c  fprint.c  param.h  pmfile  print.3  print.c  print.h  proto.make  sprint.c
modules/src/string/: .distr  CMakeLists.txt  Makefile  ack_string.h  bts2str.c  btscat.c  btscmp.c  btscpy.c  btszero.c  build.lua  build.mk  long2str.c  pmfile  proto.make  str2bts.c  str2long.c  strcat.c  strcmp.c  strcpy.c  strindex.c  string.3  strlen.c  strncat.c  strncmp.c  strncpy.c  strrindex.c  strzero.c
modules/src/system/: .distr  Amake.srclist  CMakeLists.txt  Makefile  access.c  aprintf.c  basename.c  break.c  build.lua  build.mk  chmode.c  close.c  create.c  exit.c  filesize.c  lock.c  maketempfile.c  modtime.c  open.c  pmfile  proto.make  read.c  remove.c  rename.c  seek.c  setbinarymode.c  stop.c  strndup.c  syssystem.c  system.3  system.c  system.h  time.c  tmpdir.c  tmpnam.c  unlock.c  write.c
util/LLgen/: .distr  CMakeLists.txt  COPYING  LLgen.1  Makefile  READ_ME  bootstrap.sh  build.lua  build.mk  c.pm  mkdistr.sh  pm  pmfile  pmfile-ack  proto.make
util/LLgen/doc/: LLgen.1  LLgen.n  LLgen_NCER.n
util/LLgen/lib/: .distr  incl  nc_incl  nc_rec  rec
util/LLgen/src/: .distr  LLgen.c  LLgen.g  Lpars.c  Lpars.h  Makefile  alloc.c  alloc.h  assert.h  cclass.c  cclass.h  check.c  compute.c  extern.h  gencode.c  global.c  io.h  machdep.c  main.c  name.c  proto.make  reach.c  savegram.c  sets.c  sets.h  tokens.c  tokens.g  tunable.h  types.h
util/amisc/: .distr  CMakeLists.txt  Makefile  abmodules.1  abmodules.c  aelflod.1  aelflod.c  amzlod.1  amzlod.c  anm.1  anm.c  ashow.1  ashow.c  asize.1  asize.c  aslod.1  aslod.c  astrip.1  astrip.c  build.lua  build.mk  pmfile  proto.make
util/cmisc/: .distr  CMakeLists.txt  GCIPM.c  Makefile  build.lua  build.mk  cclash.1  cclash.c  cid.1  cid.c  ed.c  mkdep.1  mkdep.c  objectify.c  pmfile  prid.1  prid.c  proto.make  tabgen.1  tabgen.c
util/make/: .distr  CMakeLists.txt  Makefile  README  check.c  h.h  input.c  macro.c  main.c  make.c  reader.c  rules.c
util/topgen/: .distr  CMakeLists.txt  LLlex.c  Makefile  build.lua  build.mk  hash.c  hash.h  main.c  misc.h  pattern.c  pattern.h  pmfile  proto.make  symtab.c  symtab.h  token.h  topgen.g  tunable.h
(+8459 files in other folders)
